fix: don't overflow external inputs inside arrays/objects

--- a/packages/core/components/AutoField/fields/ArrayField/styles.module.css
+++ b/packages/core/components/AutoField/fields/ArrayField/styles.module.css
@@ -174,6 +174,7 @@
   border: none;
   border-top: 1px solid var(--puck-color-grey-09);
   margin: 0;
+  min-width: 0; /* Needed to ensure External input doesn't overflow, see https://stackoverflow.com/a/53784508 */
   padding: 16px 15px;
 }
 
