--- a/packages/core/components/AutoField/fields/ObjectField/styles.module.css
+++ b/packages/core/components/AutoField/fields/ObjectField/styles.module.css
@@ -13,5 +13,6 @@
 .ObjectField-fieldset {
   border: none;
   margin: 0;
+  min-width: 0; /* Needed to ensure External input doesn't overflow, see https://stackoverflow.com/a/53784508 */
   padding: 16px 15px;
 }
